src/z80asm/z80asm2/t/20-preproc/expected/incbin_01.txt
% z88dk-z80asm -v -dump-after-directives t/20-preproc//input/incbin_01.asm
Assembling t/20-preproc/input/incbin_01.asm...
t/20-preproc/input/incbin_01.asm:1:7: error: Expected filename after INCBIN
    incbin ; no input file
          ^
